Bug 542580 - [11] support --enable-preview in Launching
Change-Id: Ia210b906527e189a6e00b236bd9c823dbf03edd1